# nixl

./: .clang-format  .coderabbit.yaml  .pre-commit-config.yaml  ATTRIBUTIONS-CPP.md  ATTRIBUTIONS-Python.md  ATTRIBUTIONS-Rust.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  meson.build  meson_options.txt  pyproject.toml
docs/: nixl.md  (+4 more)
examples/device/ep/: README.md  meson.build
examples/device/ep/csrc/: config.hpp  event.hpp  nixl_ep.cpp  nixl_ep.hpp
examples/device/ep/csrc/kernels/: api.cuh  configs.cuh  exception.cuh  launch.cuh  nixl_ep.cu  utils.cuh
examples/device/ep/nixl_ep/: __init__.py  buffer.py  utils.py
examples/device/ep/scripts/: reset_etcd.sh
examples/device/ep/tests/: utils.py
examples/device/ep/tests/elastic/: README.md  double_expansion.json  elastic.py  expansion_contraction.json  no_expansion.json  plan.py  rank_server.py  single_expansion.json  single_expansion_16_ranks.json  store_group.py
src/: meson.build
src/api/cpp/: nixl.h  nixl_descriptors.h  nixl_params.h  nixl_types.h
src/api/cpp/backend/: backend_aux.h  backend_engine.h  backend_plugin.h
src/api/cpp/telemetry/: telemetry_exporter.h  telemetry_plugin.h
src/api/gpu/ucx/: nixl_device.cuh
src/api/python/: __init__.py  _api.py  logging.py  meson.build
src/bindings/: meson.build
src/bindings/python/: meson.build  nixl_bindings.cpp  nixl_utils.cpp
src/bindings/python/nixl-meta/: README.md  meson.build  pyproject.toml.in
src/bindings/python/nixl-meta/nixl/: __init__.py  meson.build
src/bindings/rust/: Cargo.toml  build.rs  stubs.cpp  wrapper.cpp  wrapper.h
src/bindings/rust/src/: agent.rs  descriptors.rs  lib.rs  xfer.rs
src/bindings/rust/src/descriptors/: reg.rs  sync_manager.rs  xfer.rs  xfer_dlist_handle.rs
src/bindings/rust/src/utils/: params.rs
src/bindings/rust/tests/: test_sync_manager.rs  tests.rs
src/core/: agent_data.h  meson.build  nixl_agent.cpp  nixl_listener.cpp  nixl_plugin_manager.cpp  plugin_manager.h  telemetry.cpp  telemetry.h  telemetry_event.h  transfer_request.h
src/core/telemetry/: buffer_exporter.cpp  buffer_exporter.h  buffer_plugin.cpp  telemetry.cpp  telemetry.h  telemetry_event.h
src/infra/: mem_section.h  meson.build  nixl_descriptors.cpp  nixl_memory_section.cpp  test_utils.cpp  test_utils.h
src/plugins/: meson.build
src/plugins/azure_blob/: README.md  azure_blob_backend.cpp  azure_blob_backend.h  azure_blob_client.cpp  azure_blob_client.h  azure_blob_plugin.cpp  meson.build
src/plugins/cuda_gds/: gds_backend.h  gds_plugin.cpp  gds_utils.cpp
src/plugins/gds_mt/: gds_mt_backend.h  gds_mt_plugin.cpp
src/plugins/gpunetio/: README.md  gpunetio_backend.cpp  gpunetio_backend.h  gpunetio_backend_aux.h  gpunetio_kernels.cu  gpunetio_plugin.cpp  gpunetio_utils.cpp  meson.build
src/plugins/gpunetio/verbs/: verbs.cpp  verbs.h
src/plugins/gusli/: README.md  gusli_backend.cpp  gusli_backend.h  gusli_plugin.cpp  meson.build
src/plugins/hf3fs/: README.md  hf3fs_backend.cpp  hf3fs_backend.h  hf3fs_plugin.cpp
src/plugins/libfabric/: README.md  libfabric_backend.cpp  libfabric_backend.h  libfabric_plugin.cpp  meson.build
src/plugins/mooncake/: meson.build  mooncake_backend.cpp  mooncake_backend.h  mooncake_plugin.cpp
src/plugins/posix/: io_queue.cpp  io_queue.h  io_uring_io_queue.cpp  linux_aio_io_queue.cpp  linux_aio_queue.cpp  linux_aio_queue.h  meson.build  posix_aio_io_queue.cpp  posix_backend.cpp  posix_backend.h  posix_plugin.cpp  posix_queue.h  queue_factory_impl.cpp  queue_factory_impl.h
src/plugins/telemetry/: README.md  meson.build
src/plugins/telemetry/prometheus/: README.md  meson.build  prometheus_exporter.cpp  prometheus_exporter.h  prometheus_plugin.cpp
src/plugins/uccl/: README.md  meson.build  uccl_backend.cpp  uccl_backend.h  uccl_plugin.cpp
src/plugins/ucx/: config.cpp  config.h  gpu_xfer_req_h.cpp  gpu_xfer_req_h.h  mem_list.cpp  mem_list.h  meson.build  rkey.cpp  rkey.h  ucx_backend.cpp  ucx_backend.h  ucx_plugin.cpp  ucx_utils.cpp  ucx_utils.h
src/plugins/ucx_mo/: ucx_mo_backend.cpp  ucx_mo_backend.h  ucx_mo_plugin.cpp
src/utils/: meson.build
src/utils/common/: configuration.h  hw_info.cpp  hw_info.h  meson.build  nixl_log.cpp  nixl_log.h  operators.h  str_tools.h
src/utils/libfabric/: libfabric_common.cpp  libfabric_common.h  libfabric_rail.cpp  libfabric_rail.h  libfabric_rail_manager.cpp  libfabric_rail_manager.h  libfabric_topology.cpp  libfabric_topology.h  libfabric_tracepoints.cpp  libfabric_tracepoints.h  meson.build
src/utils/object/: engine_utils.h  meson.build
src/utils/object/s3/: aws_sdk_init.h  utils.cpp  utils.h
src/utils/serdes/: meson.build  serdes.cpp  serdes.h
src/utils/stream/: metadata_stream.cpp  metadata_stream.h
src/utils/ucx/: config.cpp  device_mem_list.cpp  device_mem_list.h  gpu_xfer_req_h.cpp  gpu_xfer_req_h.h  mem_list.cpp  mem_list.h  meson.build  ucx_utils.cpp  ucx_utils.h
test/gtest/plugins/azure_blob/: azure_blob_test.cpp  meson.build
test/gtest/plugins/uccl/: meson.build  uccl_test.cpp
test/gtest/unit/: meson.build
test/gtest/unit/agent/: agent.cpp  meson.build
test/gtest/unit/azure_blob/: azure_blob.cpp  meson.build
test/unit/plugins/: meson.build
test/unit/plugins/cuda_gds/: nixl_gds_test.cpp
test/unit/plugins/gds_mt/: meson.build  nixl_gds_mt_test.cpp
test/unit/plugins/gpunetio/: meson.build  nixl_gpunetio_stream_test.cu
test/unit/plugins/gusli/: meson.build  nixl_gusli_test.cpp
test/unit/plugins/hf3fs/: meson.build  nixl_hf3fs_mt_test.cpp  nixl_hf3fs_test.cpp
test/unit/plugins/mooncake/: mooncake_backend_test.cpp
test/unit/plugins/object/: meson.build  nixl_object_test.cpp
test/unit/plugins/posix/: meson.build  nixl_posix_test.cpp
test/unit/plugins/ucx/: meson.build  ucx_am_test.cpp  ucx_backend_multi.cpp  ucx_backend_test.cpp  ucx_worker_test.cpp
test/unit/plugins/ucx_mo/: meson.build  ucx_mo_backend_test.cpp
test/unit/utils/libfabric/: libfabric_topology_test.cpp  meson.build
test/unit/utils/libfabric/topo/: g5.48xl-topo.xml  g6.48xl-topo.xml  p3dn.24xl-topo.xml  p4d.24xl-topo.xml  p5.48xl-topo.xml  (+2 more)
(+152 files in other folders)
